<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="400dp"
    android:layout_width="285dp"
    android:padding="8dp"
    android:weightSum="100"
    android:orientation="vertical"
    android:baselineAligned="false">
    
    <LinearLayout
        android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_weight="55"
    	android:orientation="vertical">
        
        <TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:id="@+id/brush_fx_title" />
	    
        <!-- Title line -->
	    <LinearLayout
	        android:layout_height="1dp"
	        android:layout_width="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:background="#FFFFFFFF" />
        
        <LinearLayout
            android:baselineAligned="false"
        	android:layout_height="wrap_content"
    		android:layout_width="fill_parent"
    		android:paddingTop="20dp"
    		android:weightSum="100"
    		android:orientation="horizontal">
    		
	        <!-- Color picker -->
	        <LinearLayout
	            android:id="@+id/leftBox"
	            android:baselineAligned="false"
	        	android:layout_height="220dp"
	    		android:layout_width="0dp"
	    		android:layout_weight="55"
	    		android:orientation="vertical"
	    		android:weightSum="100" >
	            
	            <LinearLayout
        			android:id="@+id/colorView"
    				android:layout_height="wrap_content"
    				android:layout_width="fill_parent"
    				android:layout_weight="80"
    				android:layout_gravity="top" />
	            
	            <LinearLayout
	                android:id="@+id/monochromeButtonLayout"
	                android:layout_height="70dp"
	                android:layout_width="fill_parent"
	                android:layout_weight="20"
	                android:weightSum="100"
	                android:orientation="horizontal"
	                android:paddingBottom="20dp" >
	            
	            	<LinearLayout
	            	    android:id="@+id/whiteBox"
	            	    android:layout_height="fill_parent"
	            	    android:layout_width="0dp"
	            	    android:layout_weight="50"
	            	    android:layout_marginRight="2dp"
	            	    android:background="@drawable/border_whitebox"/>
	            
	            	<LinearLayout
	            	    android:id="@+id/blackBox"
	            	    android:layout_height="fill_parent"
	            	    android:layout_width="0dp"
	            	    android:layout_weight="50"
	            	    android:layout_marginLeft="2dp"
	            	    android:background="@drawable/border_blackbox" />
	            
	            </LinearLayout>
	            
	    	</LinearLayout>
	    	
	        <!-- Effects -->
	        <LinearLayout
	        	android:layout_height="wrap_content"
	    		android:layout_width="0dp"
	    		android:layout_weight="50"
	    		android:layout_marginLeft="5dp"
	    		android:orientation="vertical">
	        
	            <RadioGroup
					android:id="@+id/rGroup"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent" >
		    
					<RadioButton
					    android:id="@+id/btn_fx0"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:text="@string/fx1_text"
						android:textSize="20dp" />
			
					<RadioButton
						android:id="@+id/btn_fx1"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:text="@string/fx2_text"
						android:textSize="20dp" />
			
					<RadioButton
						android:id="@+id/btn_fx2"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:text="@string/fx3_text"
						android:textSize="20dp" />
					
					<RadioButton
					    android:id="@+id/btn_fx3"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:text="@string/fx4_text"
						android:textSize="20dp" />
						
				</RadioGroup>
	         
	    	</LinearLayout>
	    	
	    </LinearLayout>
        
    </LinearLayout>
    
    <!-- Slider -->
    <LinearLayout
        android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_weight="45"
    	android:layout_gravity="center_vertical|center_horizontal"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:orientation="vertical">
	        
        	<LinearLayout
	                android:id="@+id/sizeTextLayout"
	                android:layout_height="wrap_content"
	                android:layout_width="fill_parent"
	                android:weightSum="100"
	                android:orientation="horizontal" >
	            
        	    	<TextView
	                android:id="@+id/brush_size_title"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_weight="10" 
					android:layout_gravity="left"
					android:textSize="20dp" />
	            	
	            	 <TextView
					android:id="@+id/sizetext"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_gravity="right"
					android:textStyle="bold"
					android:layout_weight="90"
					android:textSize="20dp" />
	            
	            </LinearLayout>
        	      	
        
        <!-- Title line -->
        <LinearLayout
        	android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFFFF" />
        
        <SeekBar
			android:id="@+id/brush_seekbar"
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginTop="3dp"
			android:max="49"/>

    </LinearLayout>
    
    
    <!-- OK button -->
    <LinearLayout
        android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_weight="10"
    	android:orientation="horizontal">
        
        <Button
	       	android:id="@+id/save"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="bottom"
			android:text="@string/btn_ok"
			android:textSize="20dp"
			android:textStyle="bold"
			android:layout_marginTop="10dp"/>
        
    </LinearLayout>
    
</LinearLayout>