<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/MainLayout"
			  android:layout_width="fill_parent" 
			  android:layout_height="fill_parent"
			  android:orientation="vertical"
			  android:gravity="center_horizontal"
			  android:background="@drawable/back6">
		
		<RelativeLayout android:layout_height="wrap_content"
                		android:layout_width="wrap_content"
                		android:gravity="center" 
                		android:orientation="vertical">
                		
		<TextView android:id="@+id/header_options"
				  android:text="@string/header_options"
				  android:textSize="60sp"
				  android:textStyle="bold|italic"
				  android:textColor="#000000"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="53dp"
				  android:layout_marginLeft="21dp"
				  android:paddingBottom="50dp"/>
		
		<TextView android:id="@+id/header_options2"
				  android:text="@string/header_options"
				  android:textSize="60sp"
				  android:textStyle="bold|italic"
				  android:textColor="#ffd700"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="50dp"
				  android:paddingBottom="50dp"
				  android:layout_marginLeft="17dp"/>
		
		</RelativeLayout>
		
		<LinearLayout android:layout_width="fill_parent"
					  android:layout_height="fill_parent"
      				  android:layout_marginTop="-40dp"
      				  android:orientation="vertical">
		    
		    <TextView android:text="@string/opt_connection"
					  android:textSize="20dp"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_marginLeft="20dp"
					  android:textColor="@color/light_grey"/>
		    
		    <LinearLayout android:layout_height="2dp"
		        		  android:layout_width="fill_parent"
		       		  	  android:layout_marginBottom="30dp"
		       		  	  android:layout_marginLeft="20dp"
		       		  	  android:layout_marginRight="40dp"
		        		  android:background="@color/light_grey"/>
		    
		    <RadioGroup android:layout_width="fill_parent"
						android:layout_height="wrap_content" 
						android:orientation="vertical"
						android:id="@+id/radiogroup">
					
					<RadioButton android:id="@+id/btn_umts"
								 android:layout_width="fill_parent" 
								 android:layout_height="wrap_content"
								 android:textColor="@color/black"
								 android:textSize="30sp"
		       					 android:layout_marginLeft="20dp"
      							 android:layout_marginRight="20dp"
								 android:textStyle="bold"/>
					
					<RadioButton android:id="@+id/btn_bt"
								 android:layout_width="fill_parent" 
								 android:layout_height="wrap_content"
								 android:text="@string/btn_bt"
								 android:textColor="@color/black"
								 android:textSize="30sp"
		       					 android:layout_marginLeft="20dp"
      							 android:layout_marginRight="20dp"
								 android:textStyle="bold"/>
			</RadioGroup>
		    
		    <!-- 
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="200dp"
		        android:layout_margin="5dp"
		        android:background="#FFFFFFFF" />
		    
		    <TextView
				android:text="@string/opt_title2"
				android:textSize="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp" />
		    

		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="vertical"
		        android:gravity="center_horizontal">
		    
			    <Button
			        android:id="@+id/btn_umts"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:text="@string/btn_umts"
			        android:layout_marginBottom="10dp" />
			    
			    <Button
			        android:id="@+id/btn_bt"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:text="@string/btn_bt" /> 
		    
		    </LinearLayout>-->
		
		</LinearLayout>
		
</LinearLayout>